# Project_sgf

./: .gitignore  README.md  git_secret_removal_guide.md
API/: db_logic_v1_0.py  main.py  unet_logic_v2_0_0.py  unet_logic_v3_0_0.py
WEB/: .gitignore  For_chan.py  gunicorn-cfg.py  main.py  pyproject.toml  requirements_web.txt  run.py  run.sh
WEB/apps/: __init__.py  config.py
WEB/apps/authentication/: __init__.py
WEB/apps/home/: routes.py
WEB/apps/static/assets/js/: custom.js  custom_js_177line.html
